refs #23659 - fix minor issues: - change select (opened) z-index so that it does not cover social buttons + sticky menu - adapt select size option based on window width

--- a/src/modules/projections-by-country/projections-by-country.scss
+++ b/src/modules/projections-by-country/projections-by-country.scss
@@ -4,6 +4,10 @@
   &__select-block {
     background: color('background');
     padding: 15px;
+
+    .dropdown-menu {
+      z-index: 9;
+    }
   }
   
   &__select {
